# kolloquy

./: .dockerignore  .gitignore  Dockerfile  build.sh  kolloquy.tar.br  package-lock.json  package.json  svelte.config.js  todo.md  tsconfig.json  wrangler.jsonc
.github/: dependabot.yml
.github/workflows/: rust.yml
client/: account.css  account.handlebars  account.html  chat.css  chat.handlebars  chat.html  chat.ts  chats.css  chats.handlebars  chats.html  chats.ts  cryptojs.d.ts  index.css  index.html  index.ts  loading.pane.html  login.css  login.html  login.pane.html  login.ts  maintenance.html  manifest.json  purify.d.ts  register.ts  signup.html  signup.pane.html  tos.css
client/mods/: jwt-decode.ts
markup/: syntax.md
server/: Cargo.toml  api.md
server/src/: chat.rs  data.rs  email-verify.handlebars  email-verify.html  email.rs  logging.rs  main.rs  user.rs
src/: worker-configuration.d.ts
src/routes/: +layout.svelte  +page.svelte
