[package]
name = "server"
version = "0.0.1"
edition = "2024"

[profile.dev]
opt-level = "z"

[dependencies]
poem = { version = "3.1.10", features = ["cookie", "websocket"] }
reqwest = { version = "0.12.15", features = ["http2", "json"] }
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "tokio-macros"] }
dotenv = "0.15.0"
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
brotli = "8.0.1"
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
rand = { version = "0.9.1", features = ["unbiased"] }
rand_chacha = "0.9.0"
regex = { version = "1.11.1", features = ["perf"] }
ammonia = "4.1.0"
svg = "0.18.0"
rust-s3 = "0.36.0-beta.2"
aws-creds = "0.38.0"
handlebars = "6.3.2"
futures = "0.3.31"
tracing-subscriber = "0.3.20"

[profile.release]
debug = "none"
opt-level = "z"
overflow-checks = false
incremental = true
debug-assertions = false
lto = "fat"